links for refunds

--- a/reservations/templates/template_mail_owner.html
+++ b/reservations/templates/template_mail_owner.html
@@ -69,6 +69,7 @@
               display:inline-block;">
         Remboursement partiel (80%)
     </a>
+    Ci-après le lien : {{ partial_refund_link }}
 
     <!-- Bouton 2 -->
     <a href="{{ full_refund_link }}"
@@ -77,6 +78,7 @@
               display:inline-block;">
         Remboursement total (100%)
     </a>
+    Ci-après le lien : {{ full_refund_link }}
 
 </div>
 
