--- a/reservations/templates/template_bon_reservation.html
+++ b/reservations/templates/template_bon_reservation.html
@@ -10,7 +10,7 @@
 <header class="header-block">
     <!-- Colonne gauche : logo -->
     <div class="header-left">
-        <img src="/static/images/logo_SM.jpg"
+        <img src="file://{{ logo_image }}"
              alt="VTC MESLE"
              class="logo">
         <p class="text-small slogan">Vos trajets en toute sérénité</p>
@@ -18,6 +18,7 @@
 
     <!-- Colonne droite : texte -->
     <div class="header-right">
+        <br>
         <p class="text-normal">
             Exploitant de Véhicule de transport avec chauffeur</p>
         <p class="text-normal">Entreprise individuelle - SIRET : {{ siret }}</p>
